Fix size of troop selector on mobile Fix scaling of troop selector when zooming in

--- a/resources/base.css
+++ b/resources/base.css
@@ -743,11 +743,17 @@ input:checked + .slider {
 	border-color: var(--color-primary-medium);
 }
 
+.selector-container {
+	max-width: 90%;
+	min-width: 500px;
+}
+
 .selector-stats-container {
 	width: 100%;
 	display: flex;
 	flex-flow: row;
 	direction: rtl;
+	padding-left: 1.86em;
 	--local-color-light: var(--color-primary-medium);
 	--local-color: var(--color-primary-dark);
 	--local-color-medium: var(--color-primary);
@@ -757,10 +763,9 @@ input:checked + .slider {
 .selector-stats-container::before {
 	content: "";
 	position: absolute;
-	width: calc(100% + 40px);
+	width: calc(100% - 40px);
 	height: 15px;
-	margin-right: -26px;
-	margin-top: calc(1.5em - 4px);
+	margin-top: calc(1.3em - 1px);
 	border-top: 2px solid var(--local-color-light);
 	border-right: 2px solid var(--local-color-light);
 	box-shadow: 1px -1px var(--local-color);
@@ -787,7 +792,7 @@ input:checked + .slider {
 	padding-bottom: 240%;
 	margin-left: -70%;
 	transform: rotate(45deg);
-	clip-path: polygon(-1px calc(29.3% - var(--border-thickness) - 6px), -1px calc(29.3% + 1.8em), 5px calc(29.3% + 2em), calc(29.3% + 1.3em) 5px, calc(29.3% + var(--cutoff)) -1px, calc(29.3% - var(--border-thickness) - 6px) -1px);
+	clip-path: polygon(-1px calc(29.3% - var(--border-thickness) - 6px), -1px calc(29.3% + 1.8em), 5px calc(29.3% + 2em), calc(29.3% + 1.3em) 7px, calc(29.3% + var(--cutoff)) -1px, calc(29.3% - var(--border-thickness) - 6px) -1px);
 	border-top: var(--border-thickness) solid;
 	border-left: var(--border-thickness) solid;
 	border-color: inherit;
@@ -812,6 +817,8 @@ input:checked + .slider {
 
 .selector-stat:last-of-type {
 	font-size: 1.5em;
+	min-width: 30px;
+	text-align: center;
 	border-color: var(--color-primary-medium);
 	--local-color: var(--color-primary-dark);
 	background-color: var(--color-primary);
@@ -839,10 +846,8 @@ input:checked + .slider {
 .selector-slider {
 	position: relative;
 	display: inline-block;
-	width: 500px;
+	width: 100%;
 	height: 30px;
-	margin-left: -30px;
-	margin-right: -52px;
 	border-left: 2px solid var(--color-primary-medium);
 	border-right: 2px solid var(--color-primary-medium);
 	box-shadow: -1px 0 var(--color-primary-dark), 1px 0 var(--color-primary-dark), 0 0 1px 2px var(--color-primary-dark) inset;
